log
Fri 15 Mar 2024 11:07:09 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
93760cc
Fri 15 Mar 2024 11:07:34 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
169387a
Fri 15 Mar 2024 11:59:52 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: unused variable ‘elementos’ [-Werror=unused-variable]
   46 |    int elementos = 9;
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2036d75
Fri 15 Mar 2024 11:59:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2ba67ba
Sat 16 Mar 2024 12:00:27 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:5: error: invalid use of incomplete typedef ‘List’
   46 |    L->data = 2;
      |     ^~
Compilation failed
261c24f
Sat 16 Mar 2024 12:00:33 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:5: error: invalid use of incomplete typedef ‘List’
   46 |    L->data[0] = 2;
      |     ^~
Compilation failed
be8e139
Sat 16 Mar 2024 12:00:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:5: error: ‘L’ is a pointer; did you mean to use ‘->’?
   46 |    L.data[0] = 2;
      |     ^
      |     ->
Compilation failed
10c669e
Sat 16 Mar 2024 12:00:54 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:8: error: invalid use of incomplete typedef ‘List’
   46 |   Lista->data[0] = 2;
      |        ^~
exercises.c:49:11: error: ‘L’ undeclared (first use in this function)
   49 |    return L;
      |           ^
exercises.c:49:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d90051e
Sat 16 Mar 2024 12:07:07 AM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:10: error: invalid use of incomplete typedef ‘List’
   49 |     Lista->data[i] = &elemento;
      |          ^~
exercises.c:53:11: error: ‘L’ undeclared (first use in this function)
   53 |    return L;
      |           ^
exercises.c:53:11: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f6ab89
Sat 16 Mar 2024 12:07:24 AM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:6: error: invalid use of incomplete typedef ‘List’
   49 |     L->data[i] = &elemento;
      |      ^~
Compilation failed
711d38d
Sat 16 Mar 2024 12:12:44 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: invalid use of incomplete typedef ‘List’
   50 |     L->data[i] = elemento;
      |      ^~
Compilation failed
59144a9
Sat 16 Mar 2024 12:17:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: invalid use of incomplete typedef ‘List’
   50 |     L->data[i] = elemento;
      |      ^~
Compilation failed
420acc2
Sat 16 Mar 2024 12:18:47 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:9:10: fatal error: exercises.h: No such file or directory
    9 | #include "exercises.h"
      |          ^~~~~~~~~~~~~
compilation terminated.
Compilation failed
85ee26e
Sat 16 Mar 2024 12:18:54 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: invalid use of incomplete typedef ‘List’
   50 |     L->data[i] = elemento;
      |      ^~
Compilation failed
5a84919
Sat 16 Mar 2024 12:22:00 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:9: error: invalid use of incomplete typedef ‘List’
   50 |     list->data[i] = elemento;
      |         ^~
Compilation failed
bd526fd
Sat 16 Mar 2024 12:22:06 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:9: error: invalid use of incomplete typedef ‘List’
   50 |     list->data[i] = elemento;
      |         ^~
Compilation failed
0708b3f
Sat 16 Mar 2024 12:22:59 AM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:6:
arraylist.c:6:8: error: redefinition of ‘struct List’
    6 | struct List {
      |        ^~~~
In file included from test.c:5:
exercises.c:9:16: note: originally defined here
    9 | typedef struct List {
      |                ^~~~
Compilation failed
290df97
Sat 16 Mar 2024 12:23:30 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:6:
arraylist.c:6:8: error: redefinition of ‘struct List’
    6 | struct List {
      |        ^~~~
In file included from test.c:5:
exercises.c:9:8: note: originally defined here
    9 | struct List {
      |        ^~~~
Compilation failed
6c2fe1b
Sat 16 Mar 2024 12:24:24 AM UTC: 
 exercises.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:6: error: invalid use of incomplete typedef ‘List’
   48 |     L->data[i] = (void *) malloc(sizeof(void));
      |      ^~
Compilation failed
b9558ef
Sat 16 Mar 2024 12:34:59 AM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:4: error: invalid use of incomplete typedef ‘List’
   47 |   L->size = 100;
      |    ^~
Compilation failed
750ccbe
Sat 16 Mar 2024 12:36:05 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:4: error: invalid use of incomplete typedef ‘List’
   47 |   L->data[0] = malloc(sizeof(int));
      |    ^~
Compilation failed
288fcca
Sat 16 Mar 2024 12:55:50 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:45:13: error: initialization of ‘List *’ from incompatible pointer type ‘List * (*)()’ [-Werror=incompatible-pointer-types]
   45 |   List* L = create_list;
      |             ^~~~~~~~~~~
exercises.c:47:5: error: implicit declaration of function ‘pushfront’; did you mean ‘pushFront’? [-Werror=implicit-function-declaration]
   47 |     pushfront(L, &i);
      |     ^~~~~~~~~
      |     pushFront
cc1: all warnings being treated as errors
Compilation failed
1cca44e
Sat 16 Mar 2024 12:55:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:5: error: implicit declaration of function ‘pushfront’; did you mean ‘pushFront’? [-Werror=implicit-function-declaration]
   47 |     pushfront(L, &i);
      |     ^~~~~~~~~
      |     pushFront
cc1: all warnings being treated as errors
Compilation failed
49a3c55
Sat 16 Mar 2024 12:56:05 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
74eb896
Sat 16 Mar 2024 12:56:36 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:5: error: expected expression before ‘int’
   47 |     int elemento = i;
      |     ^~~
exercises.c:46:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |   for(int i = 0 ; i < 10 ; i++)
      |   ^~~
exercises.c:48:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |     pushFront(L, &elemento);
      |     ^~~~~~~~~
exercises.c:48:19: error: ‘elemento’ undeclared (first use in this function)
   48 |     pushFront(L, &elemento);
      |                   ^~~~~~~~
exercises.c:48:19: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
4844910
Sat 16 Mar 2024 12:56:56 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
1f94c01
Sat 16 Mar 2024 12:57:25 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:14: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   49 |     elemento = i;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
9bc7fa5
